--- a/basics/ex03/package.json
+++ b/basics/ex03/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex02",
   "version": "1.0.0",
-  "description": "1. 프로젝트 생성",
+  "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
