--- a/basics/webpack-practices/ex03/package.json
+++ b/basics/webpack-practices/ex03/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "ex02",
+  "name": "ex03",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dev-server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack serve --progress",
     "build": "npx webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.17.1",
     "webpack": "^5.45.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
