--- a/07. integration/app01.emaillist/backend/app.config.env
+++ b/07. integration/app01.emaillist/backend/app.config.env
@@ -1,7 +1,7 @@
 # Application General
-PROFILE=dev
+NODE_ENV=development
 LOG_LOCATION=logs
-PORT=8080
+PORT=8888
 STATIC_RESOURCES_DIRECTORY=public
 MULTER_TEMPORARY_STORE=multer-temporary-store
 UPLOADIMAGE_STORE_LOCATION=/assets/upload-images
