--- a/07. integration/app02.kanban/backend/app.config.env
+++ b/07. integration/app02.kanban/backend/app.config.env
@@ -5,8 +5,11 @@ STATIC_RESOURCES_DIRECTORY=public
 MULTER_TEMPORARY_STORE=multer-temporary-store
 UPLOADIMAGE_STORE_LOCATION=/assets/upload-images
 
+# security
+SESSION_SECRET=kaban-session
+
 # db
-DB_HOST=192.168.80.131
+DB_HOST=192.168.80.101
 DB_PORT=3307
 DB_NAME=webdb
 DB_USER=webdb
